feat(system): persist app ID
