# docs/swagger.yaml
@@ -2,6 +2,8 @@ basePath: /
 definitions:
   internal_category.Category:
     properties:
+      app_id:
+        type: integer
       created_at:
         type: string
       id:
@@ -60,6 +62,8 @@ definitions:
     properties:
       amount:
         type: number
+      app_id:
+        type: integer
       category_id:
         type: integer
       created_at:
